cl-puri (1.2.6-1) unstable; urgency=low

  * Fix .parse-error

 --

cl-puri (1.2.5-1) unstable; urgency=low

  * add shrink vector, AllegroCL fixes

 -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 19 Jul 2003 07:33:57 -0600

cl-puri (1.2.4-1) unstable; urgency=low

  * Fix typo for non-Allegro / non-SBCL platforms

 -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 18 Jul 2003 21:11:54 -0600

cl-puri (1.2.3-1) unstable; urgency=low

  * Include uri.html documentation file.

 -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 18 Jul 2003 19:57:03 -0600

cl-puri (1.2.2-1) unstable; urgency=low

  * Improve tests.lisp

 -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 18 Jul 2003 17:32:11 -0600

cl-puri (1.2.1-1) unstable; urgency=low

  * Package name fixes, .asd files

 -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 18 Jul 2003 17:06:35 -0600

cl-puri (1.2-1) unstable; urgency=low

  * More porting fixes. Now passes 126/126 regression tests.

 -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 18 Jul 2003 13:59:51 -0600

cl-puri (1.1-1) unstable; urgency=low

  * Fix some porting issues

 -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 18 Jul 2003 08:59:04 -0600

cl-puri (1.0) unstable; urgency=low

  * Initial upload
  * Changes compared to upstream: 
     - Added .asd file for use with ASDF
     - Include if* source in the uri-src.lisp file
     - Ported from AllegroCL specific functions

 -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 17 Jul 2003 21:39:34 -0600