@@ -1,8 +1,25 @@
 PURI - Portable URI Library
+===========================
 
+AUTHORS
+-------
 Franz, Inc <http://www.franz.com>
 Kevin Rosenberg <kevin@rosenberg.net>
 
+
+DOWNLOAD
+--------
+Puri home: http://files.b9.com/puri/
+Portable tester home: http://files.b9.com/tester/
+
+
+SUPPORTED PLATFORMS
+-------------------
+   AllegroCL, CLISP, CMUCL, Lispworks, OpenMCL, SBCL
+
+
+OVERVIEW
+--------
 This is portable Universal Resource Identifier library for Common Lisp
 programs. It parses URI according to the RFC 2396 specification. It's
 is based on Franz, Inc's opensource URI package and has been ported to
@@ -14,11 +31,16 @@ library. I've ported that library for use on other CL
 implementations. Puri completes 126/126 regression tests successfully.
 
 Franz's unmodified documentation file is included in the file
-uri.html. The only divergence in usage between Puri and Franz's
-package is that Puri's symbols are located in the package PURI while
-Franz's original uses the package NET.URI.
-
-Puri home: http://files.b9.com/puri/
-Portable tester home: http://files.b9.com/tester/
+uri.html. 
 
 
+DIFFERENCES BETWEEN PURI and NET.URI
+------------------------------------
+
+* Puri uses the package 'puri while NET.URI uses the package 'net.uri
+
+* To signal an error parsing a URI, Puri uses the condition
+  :uri-parse-error while NET.URI uses the condition :parse-error. This
+  divergence occurs because Franz's parse-error condition uses
+  :format-control and :format-arguments slots which are not in the ANSI
+  specification for the parse-error condition.
